changes for mobile responsiveness

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 </div>
                 <img alt="cannon stand" class="cannon-stand" src="images/stand.svg"/>
                 <div class="cannon">
-                    <img id="cannonImage" alt="cannon" src="images/cannon.svg">
+                    <img id="cannon-image" alt="cannon" src="images/cannon.svg">
                     <img class="dave" id="dave" alt="dave" src="images/dave.svg">
                 </div>
                 <div class="goal">
@@ -31,7 +31,7 @@
             </div>
             <div class="start-box">
                 <button type="button" class="start-button">START</button>
-                <div class=message>Time the cannon to SHOOT DAVE THROUGH THE HOOP Using the SPACE BAR. You have 1 minute to sink as many shots as you can!</div>
+                <div class=message>Time the cannon to SHOOT DAVE THROUGH THE HOOP Using the SPACE BAR or TAP(on mobile). You have 1 minute to sink as many shots as you can!</div>
             </div>
         </main>
     </body>
